infra/k8s/prod/ingress-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.basilnsage.com
      http:
        paths:
          - path: /auth/metrics
            backend:
              serviceName: auth-svc
              servicePort: 4000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-svc
              servicePort: 4000
          - path: /tickets/metrics
            backend:
              serviceName: crud-svc
              servicePort: 4000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: crud-svc
              servicePort: 4000
          - path: /orders/metrics
            backend:
              serviceName: orders-svc
              servicePort: 4000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-svc
              servicePort: 4000
          - path: /?(.*)
            backend:
              serviceName: client-svc
              servicePort: 3000
